# plugin-transient-pepper

./: .clang-format  .clangd  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  Distribution.xml  JE Transient Pepper.jucer  JETransientPepper.jucer  changelog  plugin-transient-pepper.code-workspace  sign_and_notarize_example.sh
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AntiAliasingFilter.h  BandPassFilter.h  DCOffsetFilter.h  DcOffsetFilter.h  Define.h  LicenseManager.h  Main.cpp  MidSideMixer.h  NamespaceParameterId.h  PeakMeter.h  PluginAudioEditor.cpp  PluginAudioEditor.h  PluginAudioProcessor.cpp  PluginAudioProcessor.h  PluginParameters.h  PluginWrapper.cpp  PluginWrapper.h  SpectralBars.h  TiltEQ.h  TransientFollower.h  TransientNoise.h  TransientNoiseLayer.h  TransientNoiseSculptor.h  Utils.h
Source/AudioProcessor/: PeakMeter.h  PluginAudioProcessor.cpp  PluginAudioProcessor.h  PluginParameters.h
Source/AudioProcessor/ProcessorBase/: BandPassFilter.h  DCOffsetFilter.h  MidSideMixer.h  TiltEQ.h  TransientFollower.h  TransientNoise.h  TransientNoiseLayer.h
Source/PluginEditor/: DefineUI.h  Fonts.h  LookAndFeelDemo.h  PluginEditor.cpp  PluginEditor.h  RoundedLabel.h
Source/PluginEditor/Header/: BypassComponent.cpp  BypassComponent.h  HeaderComponent.cpp  HeaderComponent.h  MenuComponent.cpp  MenuComponent.h  MenuLookAndFeel.h
Source/PluginEditor/LookAndFeel/: CustomLookAndFeel.h  KnobLookAndFeel.h
Source/PluginEditor/Main/: CustomLookAndFeel.h  DetectorComponent.cpp  DetectorComponent.h  EnvelopeComponent.cpp  EnvelopeComponent.h  MainComponent.cpp  MainComponent.h  MixComponent.cpp  MixComponent.h  OutputMeterSection.cpp  OutputMeterSection.h  ToneComponent.cpp  ToneComponent.h
Source/PluginEditor/Modal/: AboutModal.cpp  AboutModal.h  ActivateModal.cpp  ActivateModal.h  DeactivateComponent.cpp  DeactivateComponent.h  LoginComponent.cpp  LoginComponent.h  ModalLookAndFeel.h  TrialComponent.cpp  TrialComponent.h
Source/PluginEditor/Provider/: AudioProcessorProvider.h  EditorProvider.h  LicenseProvider.h  ProcessorProvider.h  Providers.h  ScaleController.h  ScaleProvider.h  WrapperLicenseProvider.h
Source/PluginEditor/UI/: CustomLookAndFeel.h  CustomToggleButton.h  GraphComponent.cpp  GraphComponent.h  GraphContainer.cpp  GraphContainer.h  HeaderLookAndFeel.h  KnobComponent.cpp  KnobComponent.h  KnobSlider.h  MenuLookAndFeel.h  PeakMeterComponent.cpp  PeakMeterComponent.h  PeakMeterStereoComponent.cpp  PeakMeterStereoComponent.h  RoundedLabel.h  ToggleButton.h  ToggleButtonComponent.cpp  ToggleButtonComponent.h
Source/PluginEditor/UI/Graph/: GraphComponent.cpp  GraphComponent.h  GraphContainer.cpp  GraphContainer.h
Source/PluginEditor/UI/Knob/: KnobComponent.cpp  KnobComponent.h  KnobSlider.h
Source/PluginEditor/UI/PeakMeter/: FaderComponent.h  FaderLookAndFeel.cpp  FaderLookAndFeel.h  MeterTickLabel.h  PeakMeterComponent.cpp  PeakMeterComponent.h  PeakMeterStereoComponent.cpp  PeakMeterStereoComponent.h  PeakMeterStereoFaderLabel.cpp  PeakMeterStereoFaderLabel.h
Source/PluginEditor/UI/ToggleButton/: CustomToggleButton.h  ToggleButtonComponent.cpp  ToggleButtonComponent.h
Source/WebviewPluginEditor/: WebviewPluginEditor.cpp  WebviewPluginEditor.h
WebViewGui/: .npmcheckrc  .stylelintcache  .stylelintrc.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
WebViewGui/src/: index.css  main.tsx  mantineTheme.tsx  pretendardStdVariable.css  theme.tsx
WebViewGui/src/@types/: PeakMeter.tsx  UI.tsx
WebViewGui/src/app/: index.tsx
WebViewGui/src/app/Header/: Menu.tsx  Scale.tsx  index.tsx
WebViewGui/src/app/Main/: Advanced.tsx  Buttons.tsx  (+17 more)
WebViewGui/src/define/: Color.tsx  Plugin.tsx  index.tsx
WebViewGui/src/store/: AboutStore.tsx  ActivateStore.tsx  AnalysisDataStore.tsx  ControlStore.tsx  PluginStore.tsx  SnackbarStore.tsx
WebViewGui/src/types/: PeakMeter.tsx  UI.tsx
WebViewGui/src/ui/: AnalysisDataReceiver.tsx  BlurButton.tsx  BlurIconButton.tsx  BlurToggleButton.tsx  CallBackendButton.tsx  FetchDataButton.tsx  StyledMainPaper.tsx  StyledToggleButton.tsx
WebViewGui/src/utils/: DecibelToLinear__.tsx  L__inearToDecibel.tsx  applySkew.tsx  decibelToLinear.tsx  fromNormalized.tsx  generatePathData.tsx  valueToString.tsx
WindowsInnoSetup/: License.txt  install.iss
pkg/Resources/: LICENSE.txt
pkg/scripts/AU/: postinstall
pkg/scripts/VST3/: postinstall
(+53 files in other folders)
